--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ flex-wrap: nowrap;
 .task-box {
     background-color: rgba(19, 170, 27, 0.301);
     border: 1px solid black;
-    height: auto;
+    height: fit-content;
     bottom: 5%;
 }
 
