--- a/main.css
+++ b/main.css
@@ -1,6 +1,22 @@
 body {
     background-color: lightgrey;
     overflow-y: scroll;
+    text-align: center;
+}
+
+.id-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 7px;
+  color: black;
+  border: 1px dotted red;
+}
+
+.task-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10;
+  color: black;
+  background-color: linen;
+  border: 1px solid black;
 }
 
 #nowrap {
@@ -13,7 +29,7 @@ flex-wrap: nowrap;
 }
 
 .task {
-    background-color: ivory;
+    background-color: blanchedalmond;
     border: 1px solid black;
     height: 75px;
 }
