--- a/main.css
+++ b/main.css
@@ -4,19 +4,29 @@ body {
     text-align: center;
 }
 
-.id-text {
+#id-text {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 7px;
+  font-size: 6px;
   color: black;
   border: 1px dotted red;
+  height: 25px;
+  visibility: hidden;
 }
 
-.task-text {
+#task-body {
+    border: 5px solid black;
+    border-radius: .75rem;
+}
+
+#task-text {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10;
   color: black;
   background-color: linen;
-  border: 1px solid black;
+  border: 2px solid black;
+  border-radius: .75rem;
+  height: 75px;
+  overflow: hidden;
 }
 
 #nowrap {
@@ -30,8 +40,9 @@ flex-wrap: nowrap;
 
 .task {
     background-color: blanchedalmond;
-    border: 1px solid black;
     height: 75px;
+    border: 5px solid black;
+    border-radius: .75rem;
 }
 
 .task-box {
