--- a/main.css
+++ b/main.css
@@ -6,16 +6,20 @@ body {
 
 #id-text {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 6px;
+  font-size: 12px;
   color: black;
-  border: 1px dotted red;
+  border: 3px dotted red;
   height: 25px;
-  visibility: hidden;
+  margin-bottom: 0.1rem;
 }
 
 #task-body {
     border: 5px solid black;
     border-radius: .75rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 #task-text {
@@ -27,6 +31,8 @@ body {
   border-radius: .75rem;
   height: 75px;
   overflow: hidden;
+  text-align: justify;
+  margin-bottom: 0.1rem;
 }
 
 #nowrap {
@@ -66,4 +72,9 @@ flex-wrap: nowrap;
     background-color: brown;
     border: 1px solid ivory;
     top: 90%;
+}
+
+body {
+    margin-top: 0;
+    margin-bottom: 0;
 }
