--- a/main.css
+++ b/main.css
@@ -22,6 +22,33 @@ body {
     padding-right: 1rem;
 }
 
+#completed {
+    background-color: darkgrey;
+}
+
+#completed-task-body {
+    border: 5px solid black;
+    border-radius: .75rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    background-color: darkgrey;
+}
+
+#completed-task-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10;
+  color: black;
+  background-color: darkgrey;
+  border: 2px solid black;
+  border-radius: .75rem;
+  height: 75px;
+  overflow: hidden;
+  text-align: justify;
+  margin-bottom: 0.1rem;
+}
+
 #task-text {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10;
